# Breakout_OpenGL_Cpp

./: .gitignore  CMakeLists.txt
include/: game.h  global_variables.h  sprite_renderer.hpp  windowInit.h
include/glad/: glad.h
src/: game.cpp  glad.c  main.cpp  resource_manager.cpp  sprite_renderer.cpp  windowInit.cpp
